# table_convert_rs

./: Cargo.toml  LICENSE  README.md  build.ps1
access/csharp/: godot.cs
access/godot/: DataAccess.cs
access_example/csharp/: common.cs
src/: basic.rs  lib.rs  main.rs
src/basic/: config.rs  data_json.rs  database.rs  parser.rs  raw_table.rs
src/basic/code_generator/: csharp.rs
templates/csharp/: access.hbs  cfg.hbs  class.hbs  mod.hbs  util.hbs
test/: a.csv  a_t.csv
test/csharp_output/Common/: IDataAccess.cs  Util.cs
test/csharp_output/Types/: Mod.cs
test/csharp_output/Types/a/: a_item.cs
test/csharp_output/Types/命名空间/: Mod.cs
test/csharp_output/Types/命名空间/a/: a_item.cs
test/csharp_output/Types/命名空间/a2/: a2_item.cs
test/json_output/: a.json
test/json_output/命名空间/: a.json
test/proj/: a.csv
test/proj/命名空间/: a.csv  a2.csv
